fortune-teller/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fortune-teller
  # annotations:
    # linkerd.io/inject: enabled
