fortune-teller/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortune-service
spec:
  ports:
  - port: 50051
    targetPort: 50051
    name: grpc
